# jupancon

./: .gitignore  LICENSE  LICENSE.md  README.md  pyproject.toml  requirements-dev.txt  setup.py
jupancon/: __init__.py  config.py  core.py  defaults.py  magic.py
jupancon/engine/: databricks.py
jupycon/: __init__.py  config.py  core.py  defaults.py  magic.py
requirements/: requirements-dev.txt  requirements.txt
scripts/: test.py
test/: test_config.py  test_configfile.yml  test_core.py
