[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "jupancon"
authors = [{name = "Juan Gonz\u00e1lez-Vallinas", email = "juan@multilayer.io"}]
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

dependencies = [
    "pandas>=1.5.1",
    "sshtunnel>=0.4.0",
    "pyparsing>=3.0.9",
    "sqlalchemy-redshift>=0.8.11", 
    "redshift-connector>=2.0.909",
    "databricks-sql-connector>=2.1.0"
]

[project.optional-dependencies]
test = [
    "pytest>=6.2.5",
    "jupyter>=1.0.0",
    "jupyterlab>=3.1.14",
    "black>=21.9b0",
    "flake8>=3.9.2",
    "isort>=5.9.3"
]

bigquery = [
    "sqlalchemy-bigquery==1.4.4", # this package is problematic because it requires an old version of pyarrow and conflicts with others
    "google-cloud-bigquery-storage>=2.16.2"
]

[project.urls]
Home = "https://github.com/multilayer-io/jupancon"
